[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
readme = "README.md"
packages = [{include = "image_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
jupyter = "^1.0.0"
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.270"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
